# ema-ui

./: .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
.idx/: dev.nix
app/: __init__.py  __version__.py  agent_workflow.py  chat.py
app/agents/: __init__.py  agent.py  agent_state.py  base_agent.py  coordinator_agent.py  data_scientist_agent.py  electric_engineer_agent.py  user_agent.py
app/agents/compliance/: __init__.py  compliance_agent.py  compliance_agent.yaml  compliance_agent_models.py
app/agents/data_analyst/: data_analyst_agent.py  data_analyst_agent.yaml  data_analyst_agent_models.py
app/agents/sub_agents/: electric_engineer_agent.py  reviewer_agent.py
app/agents/tools/: store_management_tool.py
app/utils/: config_handler.py  file_uploader.py  firebase_artifact_service.py  firebase_session_service.py  logger.py
rules/: firestore.rules  storage.rules
src/: __init__.py  agents.py  app.py
